Implement quickhelp tooltip and touch up per-member item/hold tracking

--- a/src/app/dash-header/dash-header.component.html
+++ b/src/app/dash-header/dash-header.component.html
@@ -1,7 +1,14 @@
 <div id="spacer">
-<nav>
-  <a [routerLink]="'./' + (button.hasOwnProperty('dest')?button.dest:button.text)"
-    routerLinkActive="selected"
-    *ngFor="let button of buttons">{{button.text}}</a>
-</nav>
+  <nav *ngIf="uID; else no_u">
+    <a routerLink="./{{uID}}/{{button.hasOwnProperty('dest')?button.dest:button.text}}"
+      routerLinkActive="selected"
+      *ngFor="let button of buttons">{{button.text}}</a>
+  </nav>
+  <ng-template #no_u>
+    <nav>
+      <a routerLink="./{{button.hasOwnProperty('dest')?button.dest:button.text}}"
+        routerLinkActive="selected"
+        *ngFor="let button of buttons">{{button.text}}</a>
+    </nav>
+  </ng-template>
 </div>
