--- a/src/app/member-acct-info/member-acct-info.component.html
+++ b/src/app/member-acct-info/member-acct-info.component.html
@@ -2,8 +2,10 @@
 <button (click)="location.back()">Go back</button>
 <div *ngIf="member">
   <div *ngIf="globals.perms.raw >= member.perms.raw || globals.uID == member.user_id; else just_the_info">
+    <br/>
     <button class="bad" *ngIf="uID!='new' && globals.uID != member.user_id" (click)="removeMember()">Delete member</button>
-    <button class="info" *ngIf="showMediaLink" routerLink="./dashboard/{{uID}}">Checked-out items</button>
+    <button class="new" *ngIf="showMediaLink" routerLink="../../dashboard/{{uID}}/items">Checked-out items</button>
+    <button class="new" *ngIf="showMediaLink" routerLink="../../dashboard/{{uID}}/holds">Holds</button>
     <h1>{{member.username}}</h1>
     <p class="low">{{member.name}}</p>
     <p><input type="text" name="username" [(ngModel)]="member.username" placeholder="Username"/></p>
