--- a/src/app/personal-holds/personal-holds.component.html
+++ b/src/app/personal-holds/personal-holds.component.html
@@ -1,3 +1,4 @@
+<h2 *ngIf="uID" style="margin-top: -.5em;">Showing holds for a specific user</h2>
 <p>{{msg}}</p>
 <ul>
   <li *ngFor="let item of items; let i = index" class="item-box result">
