--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,4 +26,4 @@
   <br/>
   Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still quite good as a surface-level run-through to supplement the HELP articles.
 </p>
-<p>Contact at <a href="mailto:booksy.db@gmail.com" target="_blank">booksy.db@gmail.com, if necessary.</a></p>
+<p>Contact at <a href="mailto:booksy.db@gmail.com" target="_blank">booksy.db@gmail.com</a>, if necessary.</p>
