--- a/src/app/role-detail/role-detail.component.html
+++ b/src/app/role-detail/role-detail.component.html
@@ -1,7 +1,7 @@
 <p>{{msg}}</p>
 <button (click)="location.back()">Go back</button>
 <h2>{{roleName}}</h2>
-<input type="text" [value]="roleName" [(ngModel)]="roleName"/>
+<input type="text" [value]="roleName" [(ngModel)]="roleName"/> <whatsthis ident="2"></whatsthis>
 <div *ngIf="permArr && maxArr && lockArr">
   <form name="role-information" (ngSubmit)="submit()" *ngIf="rID">
       <h3>Permissions</h3>
