--- a/src/app/mgmt-media/mgmt-media.component.html
+++ b/src/app/mgmt-media/mgmt-media.component.html
@@ -19,3 +19,4 @@
       <img *ngIf="item.image && item.image != 'None'" [src]="item.image" [alt]="item.title">
   </li>
 </ul>
+<media-search-bar heading="Search for items instead:"></media-search-bar>
