--- a/src/app/media-search/media-search-bar.component.html
+++ b/src/app/media-search/media-search-bar.component.html
@@ -1,22 +1,4 @@
-<h2 *ngIf="suggested.length">Based on your most-recent checkout:</h2>
-<ul>
-  <li *ngFor="let item of suggested" class="item-box">
-    <div class="text"> <!-- div in a list ahah yikes -->
-      <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
-      <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
-      <br/>
-      <span class="author">{{item.author | titlecase}}</span>
-      <br/>
-      <span class="genre">{{item.genre | titlecase}}</span>
-      <br/>
-      <br/>
-      <aside class="type">{{item.type | titlecase}}</aside>
-      <aside class="barcode">{{item.mid}}</aside>
-    </div>
-      <img *ngIf="item.image && item.image != 'None'" [src]="item.image" [alt]="item.title">
-  </li>
-</ul>
-<h2>Search for items:</h2>
+<h2>{{heading}}</h2>
 <p>{{msg}}</p>
 <form (ngSubmit)="search(true)">
   <input type="text" name="title" [(ngModel)]="title" placeholder="Title"/>
@@ -37,14 +19,16 @@
   </select>
   <input type="submit" *ngIf="checkVisible()" value="Search"/>
 </form>
+
 <p *ngIf="items.length">
-  Page {{+query.page+1}} of results for your search <!-- Commenting just to make visible that ending space -->
+  Page {{+query.page+1}} of results for your search <!--space-->
   <span *ngIf="_title">— title "{{_title}}" </span>
   <span *ngIf="_author">— author "{{_author}}" </span>
   <span *ngIf="_genre && _genre != 'null'">— genre "{{_genre}}" </span>
   <span *ngIf="_type_ && _type_ != 'null'">— type "{{_type_}}"</span>
   :
 </p>
+<!-- TODO: (?) maybe move this along with media-suggestion's identical block to its own item-list.component or something -->
 <ul>
   <li *ngFor="let item of items" class="item-box result">
     <div class="text"> <!-- div in a list ahah yikes -->
