--- a/src/app/role-detail/role-detail.component.html
+++ b/src/app/role-detail/role-detail.component.html
@@ -1,43 +1,18 @@
 <p>{{msg}}</p>
 <button (click)="location.back()">Go back</button>
 <h2>{{roleName}}</h2>
-<input type="text" [value]="roleName" [(ngModel)]="roleName"/> <whatsthis ident="2"></whatsthis>
+<input
+  type="text"
+  [value]="roleName"
+  [(ngModel)]="roleName"
+  [attr.disabled]="+globals.rawPermNum <= +rawPermNum ? 'true' : null"
+  />
+  <whatsthis ident="2"></whatsthis>
 <div *ngIf="permArr && maxArr && lockArr">
   <form name="role-information" (ngSubmit)="submit()" *ngIf="rID">
-      <h3>Permissions</h3>
-      <label *ngFor="let name of keys(permArr.names); let i = index">
-        <input [name]="name"
-          type="checkbox"
-          [value]="permArr.names[name]"
-          [(ngModel)]="permArr.names[name]"/>
-        {{globals.attrs.perms[i]}}
-        <br/>
-      </label>
-      
-      <h3>Maxes</h3>
-      <aside>Note that a value of 255 in any numeric field represents <i>infinity</i>.</aside>
-      <label *ngFor="let name of keys(maxArr.names); let i = index">
-        <input [name]="name"
-          type="number"
-          [value]="maxArr.names[name]"
-          min="0" max="255"
-          [(ngModel)]="maxArr.names[name]"/>
-        {{globals.attrs.maxes[i]}}
-        <br/>
-      </label>
-      
-      <h3>Locks</h3>
-      <aside>Note that a value of 255 in any numeric field represents <i>infinity</i>.</aside>
-      <label *ngFor="let name of keys(lockArr.names); let i = index">
-        <input [name]="name"
-          type="number"
-          [value]="lockArr.names[name]"
-          min="0" max="255"
-          [(ngModel)]="lockArr.names[name]"/>
-        {{globals.attrs.locks[i]}}
-        <br/>
-      </label>
-      
-      <input type="submit" value="Submit"/>
+      <app-perms [attr.just-view]="+globals.rawPermNum > +rawPermNum || rID == 'new'?'y':null" [arr]="permArr"></app-perms>
+      <app-maxes [attr.just-view]="+globals.rawPermNum > +rawPermNum || rID == 'new'?'y':null" [arr]="maxArr"></app-maxes>
+      <app-locks [attr.just-view]="+globals.rawPermNum > +rawPermNum || rID == 'new'?'y':null" [arr]="lockArr"></app-locks>
+      <input *ngIf="+globals.rawPermNum > +rawPermNum || rID == 'new'" type="submit" value="Submit"/>
   </form>
 </div>
