Almost implemented media types properly. TODO: Get them working in dropdowns

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 <p>
   Code is available at <a href="https://gitlab.com/hdtrhn/fbla-webapp">my GitLab repo</a>.
   <br/>
-  Made with ❤ by ***REMOVED*** for <i><a href="http://www.fbla-pbl.org/competitive-event/coding-programming/">Coding & Programming</a></i> as part of FBLA,
+  Made by ***REMOVED*** for <i><a href="http://www.fbla-pbl.org/competitive-event/coding-programming/">Coding & Programming</a></i> as part of FBLA,
   <br/>
   with liberal use of these technologies (without which none of this would have been possible):
 </p>
