--- a/src/app/media-search/media-search-bar.component.html
+++ b/src/app/media-search/media-search-bar.component.html
@@ -35,8 +35,8 @@
 <ul>
   <li *ngFor="let item of items" class="item-box" [class.result]="query">
     <div class="text"> <!-- div in a list ahah yikes -->
-      <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
-      <span class="link" *ngIf="globals.perms.names.canManageMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
+      <span class="title link" routerLink="{{breadcrumbs}}{{item.mid}}">{{item.title}}</span>
+      <span class="link" *ngIf="globals.perms.names.canManageMedia" routerLink="{{breadcrumbs}}edit/{{item.mid}}"> (edit)</span>
       <span class="link bad" *ngIf="!forbidDeletion && globals.perms.names.canManageMedia" (click)="del(item.mid); items.splice(i, 1)"> (delete)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
