--- a/src/app/media-search/media-suggestion.component.html
+++ b/src/app/media-search/media-suggestion.component.html
@@ -3,7 +3,7 @@
 <ul>
   <li *ngFor="let item of suggested" class="item-box">
     <div class="text"> <!-- div in a list ahah yikes -->
-      <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
+      <span class="title link" routerLink="{{breadcrumbs}}{{item.mid}}">{{item.title}}</span>
       <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
