--- a/src/app/attrs/maxes.component.html
+++ b/src/app/attrs/maxes.component.html
@@ -1,21 +1,35 @@
-<h3>Maxes</h3>
+<h3>Maxes</h3> <whatsthis *ngIf="!forMain" ident="3"></whatsthis>
 <div *ngIf="editable; else just_view">
-  <aside>Note that a value of 255 in any numeric field represents <em>infinity</em>.</aside>
-  <label *ngFor="let name of keys(arr.names); let i = index">
+  <aside>None of these values may exceed 250.</aside>
+  <label *ngFor="let name of keys(arr.names); let i=index">
+    <div>
+      <input
+        type="checkbox"
+        [checked]="overrideArr.names[name]==255"
+        (change)="overrideArr.names[name]=$event.target.checked?255:null"
+      > <span class="b">Infinity (no limit)</span>
+      <div *ngIf="!forMain">
+        <input
+          type="checkbox"
+          [checked]="overrideArr.names[name]==254"
+          (change)="overrideArr.names[name]=$event.target.checked?254:null"
+        > <span class="b">None (do not override)</span>
+      </div>
+    </div>
     <input
       [name]="name"
       type="number"
       min="0" max="255"
       [value]="arr.names[name]"
       [(ngModel)]="arr.names[name]"
+      [attr.disabled]="overrideArr.names[name] && !forMain"
       />
     {{globals.attrs.maxes[i]}}
-    <br/>
   </label>
 </div>
 <ng-template #just_view>
   <div>
-    <aside>Note that a value of 255 in any numeric field represents <em>infinity</em>.</aside>
+    <aside>None of these values may exceed 250.</aside>
     <label *ngFor="let name of keys(arr.names); let i = index">
       <input
         [name]="name"
