--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,3 +1,4 @@
+<h1>Item checkout</h1>
 <h2>Welcome, {{name}}</h2><br/>
 <app-notifications [username]="username"></app-notifications>
 <p *ngIf="msg">{{msg}}</p>
