--- a/src/app/generic-header/generic-header.component.css
+++ b/src/app/generic-header/generic-header.component.css
@@ -3,7 +3,6 @@ nav {
   top: 0;
   left: 0;
 }
-
 nav a {
   display: inline;
   padding: 10px;
@@ -13,7 +12,7 @@ nav a {
   color: #666;
   transition: background-color .1s;
 }
-
-nav a:active, nav a.selected {
+nav a:active, nav a:focus, nav a.selected {
+  outline: none;
   background-color: #ddd;
 }
