--- a/src/app/mgmt-roles-perms/mgmt-roles-perms.component.css
+++ b/src/app/mgmt-roles-perms/mgmt-roles-perms.component.css
@@ -7,10 +7,8 @@ li {
   display: inline-block;
   margin: 2px 5px;
   padding: 10px;
-  border: solid;
-  border-width: 1px;
+  border: 1px solid #666;
   border-radius: 5px;
-  border-color: #666;
   transition: background-color 0.1s;
 }
 li:focus, li:active {
