--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -2,8 +2,9 @@
 <p *ngIf="msg">{{msg}}</p>
 <p>Full name: <input type="text" [value]="globals.name" [(ngModel)]="fullName" [attr.disabled]="globals.managesLocation?'y':null"/></p>
 <p>New password: <input type="password" [(ngModel)]="newpass"/></p>
-<p *ngIf="!!newpass || fullName != globals.name">Current password to confirm: <input type="password" [(ngModel)]="curpass"/></p>
+<p *ngIf="newpass">Confirm new password: <input type="password" [(ngModel)]="conf" [class.bad]="conf && newpass!=conf"/></p>
+<p *ngIf="newpass || fullName != globals.name">Current password for verification: <input type="password" [(ngModel)]="curpass"/></p>
 <button
-  *ngIf="curpass && (!!newpass || fullName != globals.name)"
-  (click)="submit(); curpass = newpass = null; globals.name = fullName"
+  *ngIf="curpass && ((newpass && newpass==conf) || fullName != globals.name)"
+  (click)="submit(); curpass=conf=newpass=''; globals.name=fullName"
 >Submit</button>
