--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -6,12 +6,12 @@
 <p>The header up top will be colored based on this. Default #f7f7f7.</p>
 <input [(colorPicker)]="color" [style.background]="color" [value]="color" [cpFallbackColor]="'#f7f7f7'"/>
 <h3>Your name:</h3>
-<p>This is the name of the admin account. In the actual app your name will be displayed as '[your library's name] Admin', but your full name may be used for notifications and such.</p>
+<p>This is the 'full name' tied to the admin account. In the actual app your name will be displayed as '[Your library's name] Admin', but your full name might be used for notifications and such.</p>
 <input type="text" [(ngModel)]="adminname"/>
 <h3>Your email:</h3>
-<p>A verification email will be sent to this address after signup.</p>
+<p>A verification email will be sent to this address shortly.</p>
 <input type="text" [(ngModel)]="email"/>
-<h3>Your library's checkout account password:</h3>
+<h3>Your library's self-checkout account password:</h3>
 <p>This will be the password of the account that all your library's patrons can check out books from.</p>
 <input type="password" [(ngModel)]="checkoutpw"/>
 <h3>Your admin account password:</h3>
