--- a/src/app/attrs/maxes.component.html
+++ b/src/app/attrs/maxes.component.html
@@ -22,14 +22,14 @@
       min="0" max="255"
       [value]="arr.names[name]"
       [(ngModel)]="arr.names[name]"
-      [attr.disabled]="overrideArr.names[name] && !forMain"
+      [attr.disabled]="!forMain && overrideArr.names[name]"
+      [style.display]="(!forMain && name=='holds')?'none':''"
       />
     {{globals.attrs.maxes[i]}}
   </label>
 </div>
 <ng-template #just_view>
   <div>
-    <aside>None of these values may exceed 250.</aside>
     <label *ngFor="let name of keys(arr.names); let i = index">
       <input
         [name]="name"
