--- a/src/app/attrs/perms.component.html
+++ b/src/app/attrs/perms.component.html
@@ -11,7 +11,7 @@
         type="checkbox"
         [value]="arr.names[name]"
         [(ngModel)]="arr.names[name]"
-        [attr.disabled]="override&&!forMain?'true':null"
+        [attr.disabled]="override&&!forMain?'y':null"
         />
       {{globals.attrs.perms[i]}}
       <br/>
